# leanix-agent

./: .bumpversion.cfg  .env.example  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  a2a.json  compose.yml  debug.Dockerfile  index.html  mcp_config.json  mkdocs.yml  pyproject.toml  pytest.ini  sitemap.xml  split_mcp.py
concepts/: index.html
deployment/: index.html
docker/: Dockerfile  agent.compose.yml  compose.yml  debug.Dockerfile  mcp.compose.yml
docs/: concepts.md  deployment.md  index.md  installation.md  introspection_and_filtering.md  legacy_readme.md  overview.md  usage.md
installation/: index.html
introspection_and_filtering/: index.html
leanix_agent/: __init__.py  __main__.py  agent.py  agent_server.py  ai_inventory_builder_api.py  apptio_connector_api.py  auth.py  automations_api.py  discovery_ai_agents_api.py  discovery_linking_v1_api.py  discovery_linking_v2_api.py  discovery_saas_api.py  discovery_sap_api.py  discovery_sap_extension_api.py  documents_api.py  graph_config.py  impacts_api.py  integration_api_api.py  integration_collibra_api.py  integration_servicenow_api.py  integration_signavio_api.py  inventory_data_quality_api.py  leanix_agent_models.py  leanix_api.py  leanix_gql.py  managed_code_execution_api.py  mcp.py  mcp_config.json  mcp_server.py  metrics_api.py  mtm_api.py  navigation_api.py  pathfinder_api.py  poll_api.py  reference_data_api.py  reference_data_catalog_api.py  storage_api.py  survey_api.py  synclog_api.py  technology_discovery_api.py  (+4 more)
legacy_readme/: index.html
overview/: index.html
scripts/: generate_leanix.py  security_sanitizer.py
search/: search_index.json
tests/: conftest.py  test_auth.py  test_auto_generated_apis.py  (+11 more)
(+4281 files in other folders)
