[build-system]
requires = [ "setuptools>=80.9.0", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "leanix-agent"
version = "0.17.0"
description = "Agent package for communicating with LeanIX Enterprise Architecture Management via REST APIs and GraphQL."
readme = "README.md"
classifiers = [ "Development Status :: 4 - Beta", "License :: OSI Approved :: MIT License", "Environment :: Console", "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3",]
requires-python = ">=3.11, <3.14"
dependencies = [ "agent-utilities[mcp]>=0.22.2",]
[[project.authors]]
name = "Audel Rouhi"
email = "knucklessg1@gmail.com"

[project.license]
text = "MIT"

[project.optional-dependencies]
agent = [ "agent-utilities[agent,logfire]>=0.22.2",]
gql = [ "gql>=4.0.0",]
all = [ "leanix-agent[mcp,agent,gql,logfire]>=0.17.0",]
test = [
    "pytest-xdist>=3.6.0", "pytest", "pytest-asyncio", "pytest-cov", "gql[requests]>=4.0.0", "requests-toolbelt>=1.0.0" ]

[project.scripts]
leanix-mcp = "leanix_agent.mcp_server:mcp_server"
leanix-agent = "leanix_agent.agent_server:agent_server"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]

[tool.setuptools.package-data]
leanix_agent = [ "mcp_config.json", "agent_data/**", "skills/**",]

[tool.ruff.lint]
select = [ "E", "F", "I", "UP", "B",]
ignore = [ "E402", "E501", "B008",]

[tool.setuptools.packages.find]
where = [ ".",]

[tool.vulture]
ignore_names = ["request", "config"]
